[editor] fix(draft-editor): text editing is fixed on Firefox

--- a/packages/editor/statics/styles/rich-content-editor.scss
+++ b/packages/editor/statics/styles/rich-content-editor.scss
@@ -103,7 +103,9 @@
 
 .justify {
   &>* {
+    white-space: pre-line !important;
     text-align: justify !important;
+    text-align-last: justify !important;
   }
 }
 
